--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server/index.js --exec babel-node",
+    "start": "webpack-dev-server",
     "build": "webpack --mode=production"
   },
   "author": "",
