--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "html-webpack-plugin": "3.2.0",
+    "prop-types": "^15.6.1",
     "style-loader": "0.20.3",
     "webpack": "4.6.0",
     "webpack-cli": "^2.0.15",
@@ -35,12 +36,12 @@
     "@types/react-dom": "16.0.5",
     "express": "^4.16.3",
     "path": "^0.12.7",
-    "prop-types": "^15.6.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
