--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
+    "test": "jest --coverage",
+    "test:watch": "npm test -- --watch",
     "build": "webpack --mode=production"
   },
   "author": "",
@@ -13,17 +15,20 @@
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^23.0.0",
     "babel-loader": "7.1.4",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "css-loader": "0.28.11",
+    "enzyme-adapter-react-16": "^1.1.1",
     "es6-promise": "^4.2.4",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "html-webpack-plugin": "3.2.0",
+    "jest": "^23.0.0",
+    "jest-css-modules": "^1.1.0",
     "prop-types": "^15.6.1",
     "style-loader": "0.20.3",
     "webpack": "4.6.0",
@@ -34,6 +39,7 @@
   "dependencies": {
     "@types/react": "16.3.11",
     "@types/react-dom": "16.0.5",
+    "enzyme": "^3.0.0",
     "express": "^4.16.3",
     "path": "^0.12.7",
     "react": "16.3.2",
@@ -43,5 +49,9 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./enzyme.config.js",
+    "transform": {".*": "<rootDir>/node_modules/jest-css-modules"}
   }
 }
