--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "server": "nodemon ./src/server/index.js --exec babel-node",
+    "start": "cross-env NODE_ENV=development  node ./src/server",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack",
+    "prod": "cross-env NODE_ENV=production  node ./src/server",
     "test": "jest --coverage",
-    "test:watch": "npm test -- --watch",
-    "build": "webpack --mode=production"
+    "test:watch": "npm test -- --watch"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "0.28.11",
     "enzyme-adapter-react-16": "^1.1.1",
     "es6-promise": "^4.2.4",
@@ -31,6 +32,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.0.0",
     "jest-css-modules": "^1.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "prop-types": "^15.6.1",
     "react-router-config": "^1.0.0-beta.4",
     "redux-mock-store": "^1.5.1",
@@ -38,11 +40,15 @@
     "webpack": "4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1"
+    "webpack-hot-middleware": "^2.22.1",
+    "webpack-hot-server-middleware": "^0.5.0",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@types/react": "16.3.11",
     "@types/react-dom": "16.0.5",
+    "cross-env": "^5.1.6",
     "enzyme": "^3.0.0",
     "express": "^4.16.3",
     "path": "^0.12.7",
