--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "build": "cross-env NODE_ENV=production webpack --config ./webpack",
     "prod": "cross-env NODE_ENV=production  node ./src/server",
     "test": "jest --coverage",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@storybook/addon-actions": "^3.4.6",
+    "@storybook/addon-info": "^3.4.6",
+    "@storybook/addon-links": "^3.4.6",
+    "@storybook/addons": "^3.4.6",
+    "@storybook/react": "^3.4.6",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.3",
@@ -21,6 +28,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
+    "babel-runtime": "^6.26.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "0.28.11",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -28,12 +36,14 @@
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
+    "google-maps-react": "^2.0.2",
     "html-webpack-plugin": "3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.0.0",
     "jest-css-modules": "^1.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "prop-types": "^15.6.1",
+    "react-responsive-carousel": "^3.1.39",
     "react-router-config": "^1.0.0-beta.4",
     "redux-mock-store": "^1.5.1",
     "style-loader": "0.20.3",
