--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "npm test -- --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "lint": "eslint ./ --cache --ignore-pattern .gitignore --fix"
+    "lint": "eslint ./ --cache --ignore-pattern .gitignore --fix",
+    "flow": "flow"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "babel-jest": "^23.0.0",
     "babel-loader": "7.1.4",
     "babel-preset-env": "1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-runtime": "^6.26.0",
@@ -39,6 +41,7 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.9.1",
+    "flow-bin": "^0.74.0",
     "html-webpack-plugin": "3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.0.0",
